# advent-of-code-2024

./: .gitignore  CMakeLists.txt  README.md  aoc.bat  build.bat  clean.bat  compile.bat  exbuild.bat  ols.json  release.bat
include/: darray.h  day.h  parsing.h  strview.h
readers/: day0.pl  readtest.c
src/: darray.c  day0.c  day0.odin  day00.odin  day01.odin  day02.odin  day03.odin  day04.odin  day05.odin  day06.odin  day07.odin  day08.odin  day09.odin  day1.odin  day10.odin  day11.odin  day12.odin  day13.odin  day14.odin  day15.odin  day16.odin  day17.odin  day18.odin  day19.odin  day2.odin  day20.odin  day21.odin  day22.odin  day23.odin  day24.odin  day25.odin  day3.odin  day4.odin  main.c  main.odin  parsing.c  strview.c  template.odin
tests/: day03.odin  day04.odin
